# ska-mid-cbf-fodm-gen

./: .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  .release  CHANGELOG.rst  CMakeLists.txt  CMakeLists2.txt  Makefile  README.md  aarch64.cmake  conanfile.py  pyproject.toml  pytest.ini
cpp/: CMakeLists.txt  FirstOrderDelayModel.cpp  FirstOrderDelayModel.h
cpp/tests/: CMakeLists.txt  fodm_test.cpp
doc/calc_register_values/: Calc_Register_Values.md
doc/hodm_to_fodm/: HODM_to_FODM.md
profiles/: armv8  default
python/: fodm_calc_ref.py
python/ska_mid_cbf_fodm_gen/tests/: example_test.py
src/: CMakeLists.txt  CalcFODMRegValues.cpp  CalcFODMRegValues.h  CalcFodmRegisterValues.cpp  CalcFodmRegisterValues.h  DelayModelStore.h  FirstOrderDelayModel.cpp  FirstOrderDelayModel.h  mpreal.h
src/test/: CMakeLists.txt  HODM_to_FODM.py  fodm_calc_ref.py  fodm_test_input.csv  test_CalcFODMRegValues.cpp  test_CompareCalcFODMRegValues.cpp  test_FirstOrderDelayModel.cpp
src/test/MATLAB/: fit.m
src2/: CMakeLists.txt  CalcFODMRegValues.cpp
src2/test/: CMakeLists.txt  fodm_test_input.csv
