[project]
name = "ska-mid-cbf-fodm-gen"
version = "0.1.0"
description = "SKA Mid.CBF First Order Delay Model Generation Library"
authors = [
  { name = "John So", email = "john.so@mda.space" },
  { name = "Justin Wamback", email = "justin.wamback@mda.space" },
  { name = "Ben Herriott", email = "ben.herriott@mda.space" },
]
license = "BSD license"
readme = "README.md"

[tool.poetry]
packages = []

[tool.poetry.dependencies]
python = "~3.10"

[tool.poetry.group.dev.dependencies]
pytest-pydocstyle = "2.3.2"
pytest-pycodestyle = "2.3.1"
pytest = "8.3.1"
pytest-bdd = "^7.2.0"
pytest-cov = "^5.0.0"
pytest-forked = "^1.6.0"
pytest-json-report = "^1.5.0"
pytest-mock = "^3.14.0"
pytest-xdist = "^3.6.1"
pytest-repeat = "^0.9.3"
pytest-pylint = "^0.21.0"
pylint = "3.2.6"
pylint-junit = "0.3.4"

[tool.poetry.group.docs.dependencies]
Sphinx = "^6"
ska-ser-sphinx-theme = "^0.1.1"
myst-parser = "^2.0.0"
sphinx_collapse = "^0.1.3"
sphinxcontrib-mermaid = "^0.9.2"
black = "^23.9.1"
flake8 = "^6.1.0"
sphinxcontrib-plantuml = "^0.26"

[[tool.poetry.source]]
name = "ska-nexus"
url = "https://artefact.skao.int/repository/pypi-internal/simple"

[[tool.poetry.source]]
name = "PyPI-public"
url = "https://pypi.org/simple"

[tool.isort]
profile = "black"

[tool.black]
line-length = 130

[build-system]
requires = ["poetry>=2.0", "poetry-core>=2.0.1"]
build-backend = "poetry.core.masonry.api"
